--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.8.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^5.0.8",
     "typescript": "^5.6.3"
   }
